# openid4vp

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/cli-verifier/: Cargo.toml  README.md  main.rs
examples/cli-verifier/src/: main.rs
examples/verifier-conformance-adapter/: Cargo.toml  README.md  main.rs
examples/verifier-conformance-adapter/crypto/: jwe.rs  mod.rs
examples/verifier-conformance-adapter/server/: handlers.rs  mod.rs  state.rs
examples/verifier-conformance-adapter/src/: main.rs
examples/verifier-conformance-adapter/src/crypto/: jwe.rs
examples/verifier-conformance-adapter/src/server/: handlers.rs  state.rs
examples/wallet-conformance-adapter/: Cargo.toml  README.md  credentials.json  main.rs
examples/wallet-conformance-adapter/credentials/: store.rs
examples/wallet-conformance-adapter/crypto/: keys.rs  mod.rs
examples/wallet-conformance-adapter/dcql/: matcher.rs
examples/wallet-conformance-adapter/engine/: types.rs
examples/wallet-conformance-adapter/server/: state.rs
examples/wallet-conformance-adapter/server/handlers/: authorization.rs  mod.rs
examples/wallet-conformance-adapter/src/: config.rs  lib.rs
examples/wallet-conformance-adapter/src/credentials/: store.rs
examples/wallet-conformance-adapter/src/dcql/: mod.rs
examples/wallet-conformance-adapter/src/engine/: headless.rs  mod.rs
examples/wallet-conformance-adapter/src/server/: mod.rs  routes.rs
examples/wallet-conformance-adapter/src/server/handlers/: health.rs  metadata.rs
oid4vp-frontend/: Cargo.toml
oid4vp-frontend/src/: lib.rs
openid4vp-frontend/: Cargo.toml
src/: config.rs  jar.rs  json_schema_validation.rs  lib.rs  mdl_request.rs  mdl_response.rs  presentation_exchange.rs  presentment.rs  siop.rs  tests.rs  utils.rs  wallet.rs
src/core/: dcql_query.rs  input_descriptor.rs  jwe.rs  mod.rs  presentation_definition.rs  presentation_submission.rs
src/core/authorization_request/: mod.rs  parameters.rs
src/core/authorization_request/builder/: client.rs  mod.rs
src/core/authorization_request/verification/: did.rs  mod.rs  verifier.rs  x509_hash.rs  x509_san.rs  x509_san_dns.rs  x509_san_uri.rs
src/core/credential_format/: mod.rs
src/core/iso_18013_7/: mod.rs
src/core/metadata/: mod.rs
src/core/metadata/parameters/: mod.rs  verifier.rs  wallet.rs
src/core/object/: mod.rs
src/core/profile/: mod.rs
src/core/response/: mod.rs  parameters.rs
src/core/util/: mod.rs
src/core/verifier/: mod.rs  request_signer.rs
src/core/verifier/builder/: client.rs  mod.rs
src/dc_api/: mod.rs
src/holder/: mod.rs  verifiable_presentation_builder.rs
src/verifier/: by_reference.rs  client.rs  mod.rs  request_builder.rs  request_signer.rs  session.rs
tests/: e2e.rs  jwt_vc.rs  jwt_vp.rs
tests/examples/: issuer.jwk  subject.jwk  vc.jwt  verifier.jwk  vp.jwt
tests/presentation-definition/: iso.org.18013.5.1.mdl.json  multi-credential-array.json  multi-credential-pattern.json  multi-input-credential-enum.json
tests/presentation-submission/: definition_1.json  definition_2.json  definition_3.json  submission_1.json  submission_2.json  submission_3.json  vp_1.json  vp_2.json  vp_3.json
verifier-conformance-adapter/: Cargo.toml
verifier-conformance-adapter/src/server/: state.rs
wallet-conformance-adapter/: Cargo.toml  README.md
wallet-conformance-adapter/src/: main.rs
wallet-conformance-adapter/src/credentials/: mod.rs  store.rs
wallet-conformance-adapter/src/crypto/: jwe.rs  keys.rs  mod.rs
wallet-conformance-adapter/src/dcql/: matcher.rs
wallet-conformance-adapter/src/server/handlers/: authorization.rs  metadata.rs
