[package]
name = "oid4vp-verifier-adapter"
version = "0.1.0"
edition = "2021"
description = "OID4VP 1.0 Verifier Adapter for Conformance Testing"
license = "MIT OR Apache-2.0"
authors = ["Spruce Systems, Inc."]

[dependencies]
openid4vp = { path = "../.." }
ssi = { version = "0.11", default-features = false, features = ["secp256r1"] }

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
josekit = "0.8"
p256 = { version = "0.13", features = ["jwk", "ecdsa", "pem"] }
rand = "0.8"
url = { version = "2.5", features = ["serde"] }
base64 = "0.21"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
x509-cert = { version = "0.2", features = ["builder"] }
rcgen = "0.13"

[[bin]]
name = "oid4vp-verifier-adapter"
path = "src/main.rs"
