[package]
name = "oid4vp-wallet-adapter"
version = "0.1.0"
edition = "2021"
description = "OID4VP 1.0 Wallet Adapter for Conformance Testing"
license = "MIT OR Apache-2.0"
authors = ["Spruce Systems, Inc."]

[dependencies]
openid4vp = { path = "../.." }

axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
josekit = "0.8"
p256 = { version = "0.13", features = ["jwk", "ecdsa"] }
rand = "0.8"
sha2 = "0.10"
url = { version = "2.5", features = ["serde"] }
http = "1.1"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
async-trait = "0.1"

[[bin]]
name = "oid4vp-wallet-adapter"
path = "src/main.rs"
